--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Suhana Mishra</h1>
 
-          <p class="title">Cyber Security Specialist</p>
+          <p class="title">Cyber Security Student</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">richard@example.com</a>
+              <a href="mailto:richard@example.com" class="contact-link">suhana.mishra2124@example.com</a>
             </div>
 
           </li>
